--- a/site/collection.tmpl
+++ b/site/collection.tmpl
@@ -56,6 +56,9 @@
 {{define "content"}}
 
   {{ if ne .Collection.Description "" }}
+    <div class="celebrate">
+    <h1>🎉🎉 Happy Birthday Thomas!!! 🎉🎉🎉 <br> 🎉🎉🎉 You rock!!! 🎉🎉🎉</h1>
+    </div>
     <div class="box description">
     <pre>{{ .Collection.Description }}</pre>
     </div>
